    tokenize these backslashes--it actually just treats what we see as 2 lines
    of code as a single line of code.  In order to preserve line numbering and
    indentation tracking, tailor replaces the backslash with a special comment
    that it can detect and handle accordingly.  While this isn't ideal, given
    the current design, it seemed like the way to deal with this.
  
=== 1.1.1 2012-05-31

* gh-110[https://github.com/turboladen/tailor/issues/110]
  * Tailor now exits with 0 if non-error problems are found.
  
=== 1.1.0 2012-05-07

* gh-89[https://github.com/turboladen/tailor/issues/89]
  * You can now use {Tailor::RakeTask} to create a Rake task.
* gh-100[https://github.com/turboladen/tailor/issues/100]
  * Added {Tailor::Configuration#recursive_file_set}.  This lets you do the
    following in your config file, which will recursively match all files in
    your current path that end with '_spec.rb':

      Tailor.config do |config|
        config.recursive_file_set '*_spec.rb', :unit_tests do |style|
          style.max_line_length 90, level: :warn
        end
      end

    ...which is equivalent to:

      Tailor.config do |config|
        config.file_set '*/**/*_spec.rb', :unit_tests do |style|
          style.max_line_length 90, level: :warn
        end
      end

* gh-107[https://github.com/turboladen/tailor/issues/107]
  * Fixed --no-color option.
* gh-108[https://github.com/turboladen/tailor/issues/108]
  * Fixed --create-config, which created style level options with a missing ':'
    for the Hash value.
* Configuration files now don't force you to use the :default file set.  If you
  don't specify any file sets, then the default is used; if you specify file
  sets, it uses what you specify.
* CLI options now override config file options for all file sets (previously,
  only the :default file set's option would get overridden by the CLI option).

=== 1.0.1 2012-04-23

* gh-104[https://github.com/turboladen/tailor/issues/104]: